Fix layout problem and add anomation to page transition

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,6 @@ body {
   line-height: 1.4em;
   display: table;
   table-layout: fixed;
-  perspective: 2000px;
   min-height: 100%;
 }
 
@@ -68,11 +67,14 @@ body {
   opacity: 0;
   display: table-cell;
   overflow: hidden;
+  position: relative;
 }
 
 .article-list ul {
   list-style-type: none;
   padding: 0;
+  position: absolute;
+  top: 5px;
 }
 
 .article-list ul li {
@@ -141,23 +143,12 @@ body {
   display: table-cell;
   padding-left: 5px;
   padding-right: 15px;
-  transform-style: preserve-3d;
   transition: transform 1s;
   width: 100%;
   height: 100%;
 }
 
-.article-content.flipped {
-  transform: rotateY(180deg);
-}
-
-.article-content-edit {
-  position: absolute;
-  top: 0;
-}
-
 .article-content-view, .article-content-edit {
-  backface-visibility: hidden;
   width: 100%;
   height: 100%;
   padding-right: 25px;
@@ -267,10 +258,6 @@ body {
 }
 .article-save a:hover, .article-cancel a:hover {
   background-color: #30cd72;
-}
-
-.article-content-edit {
-  transform: rotateY(180deg);
 }
 
 .article-content-edit textarea {
